2017.12.29 ver3.3.3 - Thread cancel function in WIN32 version.
	            - Revised schemes in GUI termination (by WM).

2017.12.28 ver3.3.2 - Back fgets() --> fgets_new() in smoka parse.
	            - GUI updates in List query services.

2017.12.27 ver3.3.1 - fgets_new() --> fgets() in smoka parse (votable.c).

2017.12.25 ver3.3.0 - Added Gemini archive into "List Query" and FCDB.
                    - "json-c" is now required to parse Gemini archive info.

2017.12.21 ver3.2.0 - Added "List Query" mode in Main Menu (Database).
	              Objects listed in Object List Window can be
	              queried in SMOKA, HST, and ESO archive.
	              Each query must be done for single instruments/mode.
                    - Observatory time zones are changed into minutes.
	            - Fixed timezone failures in AllSky images' time stamps.
	            - Added HASH PN Database in web browsing.
	              It requires "HashID=XXXX" in Note section of the list.

2017.12.04 ver3.1.0 - Changed SDSS FCDB server to POST type one.
	              Imaging/Spectro queries are available.

2017.12.01 ver3.0.9 - SDSS cite is updated to DR14.
	            - Revised CASSIS's URL.

2017.11.28 ver3.0.8 - CSV output for FCDB query results.

2017.11.27 ver3.0.7 - Shot only button (SUP, HSC, and KWFC only) for SMOKA
	              frame search.
                    - Chmod 666 for /tmp/database_fc.html .

2017.11.24 ver3.0.6 - Added SMOKA/HST/ESO data archive for database query
	              in FC.
	            - Added GEMINI/KECK data archive for web browser access.
	            - Added SMOKA/HST/ESO data archive for web browser access.
	              These modes create a common temporary html file
	              (/tmp/database_fc.html). If you make a second query
	              request, the file is overwritten.

2017.11.16 ver3.0.5 - Changed LAMOST FCDB server to dr3.lamost.org .
	              Now POST method is available for DB access.